src/main/kotlin/com/example/brandcoordinator/common/error/BadRequestException.kt
package com.example.brandcoordinator.common.error

open class BadRequestException(message: String) : RuntimeException(message)
